<resources>
    <string name="app_name">Event Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="createApp">Create Appointment</string>
    <string name="viewEd">View/Edit Appointment</string>
    <string name="delApp">Delete Appointment</string>
    <string name="moveApp">Move Appointment</string>
    <string name="title">Appointment Title</string>
    <string name="detail">Details....</string>
    <string name="time">Time</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="delQ">What Would You Like To Delete?</string>
    <string name="delAll">Delete All Events</string>
    <string name="delP">Pick Event</string>
    <string name="cancel">Cancel</string>
</resources>
