<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".CreateActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/neweventtitle"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textSize = "20dp"
        android:hint="@string/createApp"/>
    <EditText
        android:id="@+id/e_title"
        android:inputType="text"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/title" />
    <EditText
        android:id="@+id/e_detail"
        android:inputType="text"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/detail"/>
    <EditText
        android:id="@+id/time"
        android:inputType="time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/time"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/saveCreate"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text = "@string/save"/>
        <Button
            android:id="@+id/cancelCreate"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text = "@string/cancel"/>
    </LinearLayout>
</LinearLayout>