<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".GameActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <CalendarView
            android:id="@+id/calendar"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="312dp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/createApp"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:padding="@dimen/tile_padding"
                android:layout_column="0"
                android:layout_row="0"
                android:textSize="13sp"
                android:text="@string/createApp" />

            <Button
                android:id="@+id/viewEd"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:padding="@dimen/tile_padding"
                android:layout_column="1"
                android:layout_row="0"
                android:textSize="13sp"
                android:text="@string/viewEd" />

            <Button
                android:id="@+id/delApp"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_column="2"
                android:layout_row="0"
                android:textSize="13sp"
                android:padding="@dimen/tile_padding"
                android:text="@string/delApp" />





        </GridLayout>




    </LinearLayout>


</FrameLayout>
